Submit btn alignment fixed

--- a/ui.frontend/src/main/webpack/etisalat/styles/wst-form-validation.scss
+++ b/ui.frontend/src/main/webpack/etisalat/styles/wst-form-validation.scss
@@ -57,7 +57,7 @@ input#phone1:focus~label {
 
 .register-btn {
 	text-align: center;
-	margin-top: 3rem;
+	
 	.button {
 		float: none !important;
 		margin: 0 auto;
@@ -324,7 +324,7 @@ input:-internal-autofill-selected  {
 
 .g-recaptcha {
 	>div {
-		margin: 5rem auto;
+		margin-top: 2rem;
 	}
 }
 
